--- a/admin/index.html
+++ b/admin/index.html
@@ -29,7 +29,7 @@
     systemDictionary = {
         "HS100/110 adapter settings": {"en": "HS100/110 adapter settings", "de": "HS100/110 Adapter-Einstellungen", "ru": "Настройки драйвера HS100"},
         "HS100/110 addresses":        {"en": "IP addresses",  "de": "IP Adressen ",  "ru": " "},
-        "Interval[ms]:":         {"en": "Ping interval[ms]",     "de": "Ping Intervall[ms]",         "ru": "Интервал опроса[мс]:"},
+        "Interval[ms]:":         {"en": "Interval[ms]",     "de": "Intervall[ms]",         "ru": "опроса[мс]:"},
         "Name":                  {"en": "Name",                  "de": "Name",                       "ru": "Имя"},
         "IP Address":            {"en": "IP Address",            "de": "IP Adresse",                 "ru": "IP Адрес"}
     };
