--- a/admin/index.html
+++ b/admin/index.html
@@ -101,7 +101,7 @@
 <div id="adapter-container">
 
     <table><tr>
-        <td><img src="HS100.png" width="64" height="64"></td>
+        <td><img src="hs100.png" width="64" height="64"></td>
         <td style="padding-top: 20px;padding-left: 10px"><h3 class="translate">settings</h3></td>
     </tr></table>
 
