--- a/admin/index.html
+++ b/admin/index.html
@@ -106,10 +106,14 @@
     </tr></table>
 
     <table>
-        <tr><td class="translate">interval</td><td><input class="value number" id="interval" type="input" size="6"/></td></tr>
+        <tr>
+            <td class="translate">interval</td>
+            <td><input class="value number" id="interval" type="input" size="6"/></td>
+        </tr>
     </table>
 
-    <table id="devices"></table><div id="pager-devices"></div>
+    <table id="devices"></table>
+    <div id="pager-devices"></div>
     <div id="values" style="width: 100%; height: calc(100% - 195px)">
         <button class="table-button-add" style="margin-left: 10px; width: 1.5em; height: 1.5em"></button>
         <div style="width: 100%; height: calc(100% - 30px); overflow: auto;">
