--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -99,6 +99,11 @@
                 <input class="value number" id="interval" size="5" maxlength="6" type="number"/>
                 <label class="translate" for="interval">interval</label>
             </div>
+            
+            <div class="input-field col s12 m6 l4 col-warning">
+                <input id="warning" type="checkbox" class="value" />
+                <label class="translate" for="warning">warn Message off</label>
+            </div>
         </div>
 
 
